--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -1,122 +1,385 @@
-.small-text{
-    color: #696969;
-    font-size: 26px;
-}
 /* This sets the font */
 @font-face {
-    font-family: Catamaran-VariableFont_wght;
-    src: url(http://localhost:3000/Fonts/Catamaran-Variable/Catamaran-VariableFont_wght.ttf);
-  }
-  div {
-    font-family: Catamaran-VariableFont_wght;
-  }
-
+  font-family: Catamaran-VariableFont_wght;
+  src: url(http://localhost:3000/Fonts/Catamaran-Variable/Catamaran-VariableFont_wght.ttf);
+}
+div {
+  font-family: Catamaran-VariableFont_wght;
+}
 
 /* This is the mirror effect */
 body {
-    background: url(http://localhost:3000/images/eugenio-pastoral-0gTtEsOBJDo-unsplash.jpg) no-repeat;
-    /* Keep the inherited background full size. */
+  /* background: url(http://localhost:3000/images/eugenio-pastoral-0gTtEsOBJDo-unsplash.jpg) no-repeat;
     background-attachment: fixed; 
-    background-size: cover;
-    font-family: Catamaran-VariableFont;
-
-  }
-  h1, h2, h3, p {
-      color: white;
-  }
-
-  .container {
-    width: 80%;
-    height: auto;
-    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
-    border-radius: 5px;
-    position: relative;
-    z-index: 1;
-    background: inherit;
-    overflow: hidden;
-  }
-  
-  .container:before {
-    content: "";
-    position: absolute;
-    background: inherit;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-    filter: blur(10px);
-    margin: -20px;
-  }
-  
-  .block1{
-      margin: 5% auto;
-  }
-  .glass{
-      margin: 5% auto;
-      padding: 15px;
-      display: flex;
-      flex-direction: column;
-  }
-.ll-title{
-    text-align: center;
+    background-size: cover; */
+  background-color: white;
+  font-family: Catamaran-VariableFont;
+  margin: 0px;
 }
-.g-links{
-    display: flex;
-    flex-basis: 50%;
-    flex-direction: row;
-    justify-content: space-evenly;
+h1,
+h2,
+h3,
+p {
+  color: black;
 }
-.gl-box{
-    display: flex;
-    flex-direction: column;
-    margin: 0px 5px;
+
+.container {
+  width: 80%;
+  height: auto;
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  position: relative;
+  z-index: 1;
+  background: inherit;
+  overflow: hidden;
+}
+
+.container:before {
+  content: "";
+  position: absolute;
+  background: inherit;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0.5);
+  filter: blur(10px);
+  margin: -20px;
+}
+
+.block1 {
+  margin: 5% auto;
+}
+.glass {
+  margin: 5% auto;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+}
+.ll-title {
+  text-align: center;
+}
+.g-links {
+  display: flex;
+  flex-basis: 50%;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.gl-box {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 5px;
 }
 .button {
-    background-color: #6b6577; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
+  background-color: #6b6577; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+  margin: 5px auto;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  width: 100%;
+}
+.button a {
+  color: white;
+  text-decoration: none;
+}
+.button p {
+  color: white;
+  text-decoration: none;
+}
+
+.button1:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+.button2 {
+}
+.button2:hover {
+  animation: zoomInUp;
+}
+.header-title {
+  margin: auto 15px auto 0px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 26px;
+}
+.body {
+  height: auto;
+  top: 0;
+  left: 0;
+  margin: 0px 5%;
+}
+.section {
+  width: auto;
+  height: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+/* Hide mobile & hide desktop */
+.hide-desktop {
+  display: none;
+}
+@media screen and (max-width: 900px) {
+  .hide-mobile {
+    display: none;
+  }
+}
+
+/* Topnav with Dropwdown */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  top: 0;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.active {
+  background-color: #242424b0;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover,
+.dropdown:hover .dropbtn {
+  background-color: #555;
+  color: white;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child),
+  .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {
+    float: none;
+  }
+  .topnav.responsive .dropdown-content {
+    position: relative;
+  }
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
+/* Image with Text */
+.image-with-text {
+  display: flex;
+  flex-basis: 100%;
+  flex-direction: row;
+  margin: 20px 5%;
+}
+.image-with-text-box {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 50%;
+  justify-content: center;
+  padding: 10px;
+}
+.image-with-text-box img {
+  width: 400px;
+  height: auto;
+  margin: 0px auto;
+  box-shadow: 0 0 25px 10px #fff, 0px 0px 0px 10px #000;
+}
+
+@media screen and (max-width: 900px) {
+  .image-with-text {
+    display: flex;
+    flex-basis: 100%;
+    flex-direction: column-reverse;
+    margin: 20px 5%;
+  }
+  .image-with-text-box {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+    justify-content: center;
+  }
+  .image-with-text-box h2,
+  p {
     text-align: center;
-    text-decoration: none;
-    display: flex;
-    font-size: 16px;
-    margin: 5px auto;
-    cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    width: 100%;
   }
-.button a{
-    color: white;
-    text-decoration: none;
 }
-
-  .button1:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-  }
-  .button2 {
-  }
-  .button2:hover {
-    animation: zoomInUp;
-
-  }
-  .header{
-    position: sticky;
-    width: 100%;
-    height: 5em;
-    background-color: white;
-    /* z-index: 5; */
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: row-reverse;
+/* Personal Image with Text */
+.personal-img-txt {
+  width: 900px;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  flex-basis: 100%;
+  align-items: center;
+  margin: 10px auto;
 }
-.body{
-    width: 100%;
-    height: auto;
-    top: 0;
-    left: 0;
-    margin: 0px 10px;
+.pit-img {
+  display: flex;
+  flex-basis: 50%;
+  justify-content: flex-end;
+}
+.pit-about {
+  flex-basis: 50%;
+  margin: 10px;
+  padding: 15px;
+}
+.pit-img-crc {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  background-image: url(http://localhost:3000/images/Ultralight_IMG_2169.jpg);
+  background-size: cover;
+  background-position: center;
+  border-radius: 56%;
+}
+.pit-img-crc .pit-overlay .pit-text {
+  border-radius: 56%;
+}
+.pit-img-crc:hover .pit-overlay {
+  opacity: 0.9;
+}
+.pit-img-crc img {
+  display: block;
+  border-radius: 56%;
+}
+.pit-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  background-color: #696969;
+  border-radius: 56%;
+}
+.pit-text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+/* Yellow Box // Seamless Banner */
+.yellow-box {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: row;
+  background-color: #fad64a;
+  overflow: hidden;
+}
+.yb-img {
+  display: flex;
+  align-items: flex-start;
+  flex-basis: 25%;
+}
+.yb-img img {
+  max-height: 500px;
+}
+.yb-block {
+  box-shadow: -10px 0px 16px 17px #fad64a;
+  flex-basis: 75%;
+}
+@media screen and (max-width: 900px) {
+  .yb-img {
+    display: flex;
+    align-items: flex-end;
+  }
+  
+  
+}
+/* Footer */
+.footer {
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+  position: absolute;
 }
