--- a/flexgrid.css
+++ b/flexgrid.css
@@ -11,6 +11,7 @@
   width: 200px;
   margin: 30px;
   transition: 0.3s;
+  background-color: #eb959a;
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .fgc-top {
@@ -28,6 +29,7 @@
     width: 100%;
     text-align: center;
     transition: 0.4s;
+    padding: 10px 0px;
 }
 div.fgc-btn > a:link, div.fgc-btn > a:visited{
     text-decoration: none;
